--- a/src/components/ProductScreen/AboutProduct.module.css
+++ b/src/components/ProductScreen/AboutProduct.module.css
@@ -84,7 +84,8 @@
 	background-color: var(--button-bg-hover);
 }
 
-.aboutProduct_product_info_buy_like {
+.aboutProduct_product_info_buy_like,
+.aboutProduct_product_info_buy_like_added {
 	display: inline-flex;
 	align-items: center;
 	gap: 0.5rem;
@@ -98,6 +99,11 @@
 .aboutProduct_product_info_buy_like:hover svg {
 	color: red;
 }
+
+.aboutProduct_product_info_buy_like_added svg {
+	color: red;
+}
+
 .aboutProduct_product_info_buy_others p {
 	margin: 0.3rem;
 }
@@ -122,7 +128,8 @@
 	.aboutProduct_product_info_buy_cart_btnAdd {
 		font-size: 1rem;
 	}
-	.aboutProduct_product_info_buy_like {
+	.aboutProduct_product_info_buy_like,
+	.aboutProduct_product_info_buy_like_added {
 		font-size: 1.1rem;
 	}
 }
