--- a/src/components/FavoritesScreen/FavoritesProduct.module.css
+++ b/src/components/FavoritesScreen/FavoritesProduct.module.css
@@ -5,7 +5,7 @@
 	gap: 1em;
 	margin: 1rem 0;
 	padding: 1em;
-	width: 300px;
+	width: 250px;
 	text-align: center;
 	border: 1px solid grey;
 }
@@ -52,4 +52,10 @@
 }
 .favoritesProduct_product_btn button:hover {
 	background-color: var(--button-bg-hover);
+}
+
+@media screen and (min-width: 600px) {
+	.favoritesProduct_product {
+		width: 300px;
+	}
 }
