--- a/src/components/Cart/CartItemSmall.module.css
+++ b/src/components/Cart/CartItemSmall.module.css
@@ -1,49 +1,50 @@
 .cartItemSmall {
-	position: relative;
-	display: flex;
-	gap: 1rem;
-	height: 6em;
-	padding: 1rem 0 0.5rem;
-	border-bottom: 1px solid var(--border-color);
+  position: relative;
+  display: flex;
+  gap: 1rem;
+  height: 6em;
+  padding: 1rem 0 0.5rem;
+  border-bottom: 1px solid var(--border-color);
 }
-.cartItemSmall img {
-	height: 100%;
-	width: 25%;
-	cursor: pointer;
+.cartItemSmall_img {
+  width: 25%;
+  height: 100%;
+  cursor: pointer;
+}
+.cartItemSmall_img img {
+  width: 100%;
 }
 .cartItemSmall button {
-	position: absolute;
-	right: 0;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	height: 1.2em;
-	width: 1.5rem;
-	font-size: 1rem;
-	margin-right: 0.8rem;
-	background: transparent;
-	border: none;
-	cursor: pointer;
-	color: var(--text-color2);
+  position: absolute;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 1.2em;
+  width: 1.5rem;
+  font-size: 1rem;
+  margin-right: 0.8rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  color: var(--text-color2);
 }
 
 .cartItemSmall__info_name {
-	width: 70%;
-	font-size: 0.9rem;
-	cursor: pointer;
+  width: 70%;
+  font-size: 0.9rem;
+  cursor: pointer;
 }
 .cartItemSmall__info_box {
-	display: flex;
-	margin-top: 0.5rem;
+  display: flex;
+  margin-top: 0.5rem;
 }
 .cartItemSmall__info_box_amount {
-	font-size: 0.9rem;
-	color: var(--text-color2);
+  font-size: 0.9rem;
+  color: var(--text-color2);
 }
 .cartItemSmall__info_box_price {
-	color: var(--main-background-color);
-	margin-left: 0.5rem;
-	font-size: 0.9rem;
-}
-@media screen and (min-width: 600px) {
+  color: var(--main-background-color);
+  margin-left: 0.5rem;
+  font-size: 0.9rem;
 }
