--- a/src/screens/PaymentScreen.module.css
+++ b/src/screens/PaymentScreen.module.css
@@ -1,7 +1,7 @@
 .paymentScreen {
   flex-direction: column;
   align-items: center;
-  margin: 1rem 4rem;
+  margin: 1rem;
   min-height: 53vh;
 }
 .paymentScreen h2 {
@@ -14,6 +14,7 @@
 .paymentScreen_methods {
   text-align: center;
   display: flex;
+  flex-direction: column;
   margin-top: 2em;
 }
 .paymentScreen_methods h4 {
@@ -28,7 +29,7 @@
   font-weight: bold;
 }
 .paymentScreen_methods_transfer {
-  width: 50%;
+  width: 100%;
 }
 .paymentScreen_methods_other {
   display: flex;
@@ -39,7 +40,7 @@
 }
 .paymentScreen_methods_other_box {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -66,4 +67,21 @@
 }
 .paymentScreen_methods_other_logo img {
   width: 100%;
+}
+@media screen and (min-width: 600px) {
+  .paymentScreen {
+    margin: 1rem 4rem;
+  }
+  .paymentScreen_methods_other_box {
+    flex-direction: row;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .paymentScreen_methods {
+    flex-direction: row;
+  }
+  .paymentScreen_methods_transfer {
+    width: 50%;
+  }
 }
