--- a/src/screens/OrderScreen.module.css
+++ b/src/screens/OrderScreen.module.css
@@ -17,13 +17,13 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
 }
 .orderScreen_from span {
   color: red;
 }
 .orderScreen_from input {
   padding: 0.3rem;
+  margin-bottom: 0.5rem;
   border: 1px solid grey;
 }
 input.error_input::placeholder {
