--- a/src/screens/SignUpScreen.module.css
+++ b/src/screens/SignUpScreen.module.css
@@ -30,6 +30,12 @@
   padding: 0.3rem;
   border: 1px solid rgb(184, 184, 184);
 }
+.signUpScreen_form_success {
+  text-align: center;
+}
+.signUpScreen_form_success span {
+  color: var(--main-background-color);
+}
 .error_message {
   font-size: 0.8rem;
   color: var(--error-text);
