--- a/src/components/ProductScreen/AboutProduct.module.css
+++ b/src/components/ProductScreen/AboutProduct.module.css
@@ -1,141 +1,142 @@
 .aboutProduct_product_info {
-	width: 100%;
+  width: 100%;
 }
 .aboutProduct_product_info_name {
-	font-size: 1.2rem;
-	text-transform: uppercase;
+  font-size: 1.2rem;
+  text-transform: uppercase;
 }
 .aboutProduct_product_info_price {
-	margin: 0.5rem 0;
-	font-size: 1.2rem;
-	color: var(--main-background-color);
+  margin: 0.5rem 0;
+  font-size: 1.2rem;
+  color: var(--main-background-color);
 }
 .aboutProduct_product_info_path {
-	display: flex;
-	flex-wrap: wrap;
-	gap: 0.3rem;
-	margin-bottom: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.3rem;
+  margin-bottom: 1rem;
 }
 .aboutProduct_product_info_path a {
-	color: var(--text-color2);
-	text-decoration: none;
-	transition: color 0.4s;
+  color: var(--text-color2);
+  text-decoration: none;
+  transition: color 0.4s;
 }
 .aboutProduct_product_info_path a:hover {
-	color: var(--text-color1);
+  color: var(--text-color1);
 }
 .aboutProduct_product_info_path span {
-	color: var(--text-color2);
+  color: var(--text-color2);
 }
 
 .aboutProduct_product_info_buy_amount {
-	display: flex;
-	align-items: center;
-	margin: 1rem 0;
-	gap: 0.5rem;
+  display: flex;
+  align-items: center;
+  margin: 1rem 0;
+  gap: 0.5rem;
 }
 .aboutProduct_product_info_buy_amount svg {
-	font-size: 1.1rem;
-	color: var(--main-background-color);
+  font-size: 1.1rem;
+  color: var(--main-background-color);
 }
 .aboutProduct_product_info_buy_lack {
-	margin: 1rem 0;
-	color: var(--error-text);
+  margin: 1rem 0;
+  color: var(--error-text);
 }
 .aboutProduct_product_info_buy_cart {
-	display: flex;
-	align-items: center;
-	margin: 0.5rem 0;
+  display: flex;
+  align-items: center;
+  margin: 0.5rem 0;
 }
 .aboutProduct_product_info_buy_cart_btn {
-	height: 30px;
-	width: 20px;
-	font-size: 1rem;
-	border: none;
-	border: 1px solid grey;
-	cursor: pointer;
-	transition: 0.4s;
+  height: 30px;
+  width: 20px;
+  font-size: 1rem;
+  border: none;
+  border: 1px solid grey;
+  cursor: pointer;
+  transition: 0.4s;
 }
 .aboutProduct_product_info_buy_cart_btn:hover {
-	color: white;
-	background-color: var(--main-background-color);
-	border: 1px solid rgb(73, 193, 52);
+  color: white;
+  background-color: var(--main-background-color);
+  border: 1px solid rgb(73, 193, 52);
 }
 .aboutProduct_product_info_buy_cart input {
-	width: 30px;
-	height: 30px;
-	padding: 0.3rem;
-	font-size: 1rem;
-	text-align: center;
-	border: none;
-	border: 1px solid grey;
+  width: 30px;
+  height: 30px;
+  padding: 0.3rem;
+  font-size: 1rem;
+  text-align: center;
+  border: none;
+  border: 1px solid grey;
 }
 .aboutProduct_product_info_buy_cart_btnAdd {
-	text-transform: uppercase;
-	margin-left: 1rem;
-	padding: 0.5rem 1rem;
-	border: none;
-	color: var(--text-color);
-	background-color: var(--main-background-color);
-	cursor: pointer;
-	transition: background-color 0.4s;
+  text-transform: uppercase;
+  margin-left: 1rem;
+  min-width: 200px;
+  padding: 0.5rem 1rem;
+  border: none;
+  color: var(--text-color);
+  background-color: var(--main-background-color);
+  cursor: pointer;
+  transition: background-color 0.4s;
 }
 .aboutProduct_product_info_buy_cart_btnAdd:hover {
-	background-color: var(--button-bg-hover);
+  background-color: var(--button-bg-hover);
 }
 
 .aboutProduct_product_info_buy_like,
 .aboutProduct_product_info_buy_like_added {
-	display: inline-flex;
-	align-items: center;
-	gap: 0.5rem;
-	margin: 1rem 0;
-	transition: color 0.4s;
-	cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  gap: 0.5rem;
+  margin: 1rem 0;
+  transition: color 0.4s;
+  cursor: pointer;
 }
 .aboutProduct_product_info_buy_like:hover p {
-	color: var(--text-color2);
+  color: var(--text-color2);
 }
 .aboutProduct_product_info_buy_like:hover svg {
-	color: red;
+  color: red;
 }
 
 .aboutProduct_product_info_buy_like_added svg {
-	color: red;
+  color: red;
 }
 
 .aboutProduct_product_info_buy_others p {
-	margin: 0.3rem;
+  margin: 0.3rem;
 }
 .aboutProduct_product_info_buy_others span {
-	color: var(--text-color2);
+  color: var(--text-color2);
 }
 @media screen and (min-width: 600px) {
-	.aboutProduct_product_info_name {
-		font-size: 2rem;
-	}
-	.aboutProduct_product_info_price {
-		font-size: 1.8rem;
-	}
-	.aboutProduct_product_info_buy_cart_btn {
-		height: 40px;
-		width: 20px;
-	}
-	.aboutProduct_product_info_buy_cart input {
-		width: 30px;
-		height: 40px;
-	}
-	.aboutProduct_product_info_buy_cart_btnAdd {
-		font-size: 1rem;
-	}
-	.aboutProduct_product_info_buy_like,
-	.aboutProduct_product_info_buy_like_added {
-		font-size: 1.1rem;
-	}
+  .aboutProduct_product_info_name {
+    font-size: 2rem;
+  }
+  .aboutProduct_product_info_price {
+    font-size: 1.8rem;
+  }
+  .aboutProduct_product_info_buy_cart_btn {
+    height: 40px;
+    width: 20px;
+  }
+  .aboutProduct_product_info_buy_cart input {
+    width: 30px;
+    height: 40px;
+  }
+  .aboutProduct_product_info_buy_cart_btnAdd {
+    font-size: 1rem;
+  }
+  .aboutProduct_product_info_buy_like,
+  .aboutProduct_product_info_buy_like_added {
+    font-size: 1.1rem;
+  }
 }
 
 @media screen and (min-width: 800px) {
-	.aboutProduct_product_info {
-		width: 40%;
-	}
+  .aboutProduct_product_info {
+    width: 40%;
+  }
 }
