add password recovery screen

--- a/src/screens/PasswordRecoveryScreen.module.css
+++ b/src/screens/PasswordRecoveryScreen.module.css
@@ -42,6 +42,15 @@
   font-size: 0.8rem;
   color: var(--error-text);
 }
+.error_message {
+  font-size: 0.8rem;
+  color: var(--error-text);
+}
+.confirm_message {
+  font-size: 1rem;
+  margin-top: 0.5rem;
+  color: rgb(18, 84, 137);
+}
 
 @media screen and (min-width: 600px) {
   .passwordRecovery h1 {
