--- a/src/components/Header/LoginMenu.module.css
+++ b/src/components/Header/LoginMenu.module.css
@@ -88,6 +88,17 @@
   font-size: 1rem;
 }
 
+.loginMenu__main_logged a {
+  margin-top: 0.5rem;
+  padding: 0.5rem;
+  padding-left: 1.5rem;
+  display: flex;
+  align-items: center;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  cursor: pointer;
+	border-bottom: 1px solid rgb(176, 176, 176);
+}
 .loginMenu__backdrop {
   position: absolute;
   height: 100%;
