--- a/src/screens/OrdersListScreen.module.css
+++ b/src/screens/OrdersListScreen.module.css
@@ -4,8 +4,20 @@
   justify-content: center;
   align-items: center;
   min-height: 60vh;
-  padding: 2rem 4rem;
+  padding: 1rem;
+}
+.ordersList h1 {
+  font-size: 1.5rem;
 }
 .errorMsg {
   color: var(--error-text);
+}
+
+@media screen and (min-width: 600px) {
+  .ordersList {
+    padding: 2rem 4rem;
+  }
+  .ordersList h1 {
+    font-size: 2rem;
+  }
 }
