--- a/src/components/OrderListScreen/OrderInfo.module.css
+++ b/src/components/OrderListScreen/OrderInfo.module.css
@@ -8,6 +8,7 @@
   gap: 0.5rem;
   background-color: rgb(218, 218, 218);
   padding: 0.5rem;
+  padding-left: 1rem;
   margin-bottom: 1rem;
 }
 .orderInfo_product {
