--- a/src/screens/PasswordRecoveryScreen.module.css
+++ b/src/screens/PasswordRecoveryScreen.module.css
@@ -49,7 +49,7 @@
 .confirm_message {
   font-size: 1rem;
   margin-top: 0.5rem;
-  color: rgb(18, 84, 137);
+  color: var(--success-text);
 }
 
 @media screen and (min-width: 600px) {
