--- a/src/components/ContactScreen/ContactForm.module.css
+++ b/src/components/ContactScreen/ContactForm.module.css
@@ -1,61 +1,71 @@
 .contactForm {
-	width: 100%;
+  width: 100%;
 }
 .contactForm h3 {
-	margin: 0.5rem 0;
+  margin: 0.5rem 0;
 }
 .contactForm form {
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 .contactForm label {
-	margin-top: 0.5rem;
+  margin-top: 0.5rem;
 }
 .contactForm input,
 .contactForm textarea {
-	font-size: 1rem;
-	padding: 0.3rem;
-	border: none;
-	border: 1px solid grey;
+  font-size: 1rem;
+  padding: 0.3rem;
+  border: none;
+  border: 1px solid grey;
 }
 .contactForm_name {
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 .contactForm_agreement {
-	display: flex;
+  display: flex;
 }
 
 .contactForm button {
-	font-size: 1rem;
-	width: auto;
-	margin-top: 1rem;
-	padding: 0.3rem 1rem;
-	border: none;
-	color: var(--text-color);
-	background-color: var(--main-background-color);
-	cursor: pointer;
-	transition: 0.3s;
+  font-size: 1rem;
+  width: auto;
+  margin-top: 1rem;
+  padding: 0.3rem 1rem;
+  border: none;
+  color: var(--text-color);
+  background-color: var(--main-background-color);
+  cursor: pointer;
+  transition: 0.3s;
 }
 .contactForm button:hover {
-	background-color: var(--button-bg-hover);
+  background-color: var(--button-bg-hover);
 }
 .contactForm p {
-	margin-top: 0.3rem;
-	font-size: 0.8rem;
+  margin-top: 0.3rem;
+  font-size: 0.8rem;
 }
 .contactForm span {
-	color: red;
+  color: red;
+}
+.errorInput {
+  border: 1px solid rgb(200, 21, 21);
+}
+.errorInput::placeholder {
+  color: rgb(200, 21, 21);
+}
+.errorText {
+  font-size: 0.8rem;
+  color: rgb(200, 21, 21);
 }
 @media screen and (min-width: 600px) {
-	.contactForm_name {
-		flex-direction: row;
-	}
+  .contactForm_name {
+    flex-direction: row;
+  }
 }
 
 @media screen and (min-width: 1000px) {
-	.contactForm {
-		width: 45%;
-	}
+  .contactForm {
+    width: 45%;
+  }
 }
